DDS Texture conversion
* Art pass on Caen.
* Reduce load- and unload- Distance on Askilos and Elaan's Scatterer planetlist. This might finally fix the scatterer bugs.
* Remove viewdirOffset from Elaan and Askilos' scatterer atmo config, because it seems like it doesn't do anything and removing it might finally fix the scatterer bugs.
* Convert all Scaledspace textures to dds, and enable OnDemand loading.
* Move all textures in each subsystem into PluginData folders rather than Texture folders
* I got carried away and added 6 Kronometer Calendars for Asite Par Homeworld. They can be switched between using the SETTINGS.cfg file.

--- a/WeekWorldPlanetJam/HomeworldSwap/AsitePar_Homeworld.cfg
+++ b/WeekWorldPlanetJam/HomeworldSwap/AsitePar_Homeworld.cfg
@@ -21,7 +21,8 @@
 		{
 			%isHomeWorld = True
 			%displayName = Asite Par^N
-			%solarRotationPeriod = False
+			%solarRotationPeriod = True
+			%rotationPeriod = 2462400.000
 		}
 		SpaceCenter
 		{
@@ -94,5 +95,53 @@ key =	88000	0.00000E+00	0.00000E+00	0.00000E+00
 		body = Kerbin
 		caster = Askilos
 		caster = Elaan
+	}
+}
+
+
+@Scatterer_planetsList:HAS[!WWPJ_Settings]:AFTER[WeekWorldPlanetJam]
+{
+	#@WWPJ_Settings {}
+}
+@Scatterer_planetsList:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:AFTER[WeekWorldPlanetJam]
+{
+	@scattererCelestialBodies
+	{
+		!Item:HAS[#celestialBodyName[Kerbin]]{}
+		@Item:HAS[#celestialBodyName[AsitePar]]
+		{
+			@celestialBodyName = Kerbin
+			@transformName = Kerbin
+		}
+	}
+}
+@Scatterer_ocean:HAS[!WWPJ_Settings]:AFTER[WeekWorldPlanetJam]
+{
+	#@WWPJ_Settings {}
+}
+@Scatterer_atmosphere:HAS[!WWPJ_Settings]:AFTER[WeekWorldPlanetJam]
+{
+	#@WWPJ_Settings {}
+}
+//@Scatterer_ocean:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:FOR[zWeekWorldPlanetJam]
+//{
+//	!Ocean:HAS[#name[Kerbin]]{}
+//}
+@Scatterer_atmosphere:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:FOR[zWeekWorldPlanetJam]
+{
+	!Atmo:HAS[#name[Kerbin]]{}
+}
+!Scatterer_ocean[AsitePar]:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:AFTER[zWeekWorldPlanetJam]
+{
+	//@Ocean[AsitePar]
+	//{
+	//	@name = Kerbin
+	//}
+}
+@Scatterer_atmosphere[AsitePar]:HAS[@WWPJ_Settings:HAS[#Homeworld[AsitePar]]]:AFTER[zWeekWorldPlanetJam]
+{
+	@Atmo[AsitePar]
+	{
+		@name = Kerbin
 	}
 }
