--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/AsitePar.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/AsitePar.cfg
@@ -15,11 +15,29 @@
 			displayName = Asite Par^N
 			description = Asite Par is a strange planet, owing its home to a graviational keyhole created by its larger neighbor, Reticulum. The planet is known to host a large ocean on one hemisphere, and an arid desert on the other. Asite Par is named for an old phrase meaning "gifted dwelling," though sometimes its name is also attributed to a noise made by its discoverer while they fell off their chair during an observing session. \n\n <color=#d358c8>-Wolf Rayet AKA "Exo's Lab"</color>
 			radius = 507000
-			rotationPeriod = 2050020
+			
+			//rotationPeriod = 2050020
+			
+			//original period:
+			//orbital period = 1119638.341 seconds = 311.01065 hours = 12.959 earth days
+			//sidereal day   = 2050020.000 seconds = 569.45000 hours = 23.727 earth days
+			//solar day      = 2467031.644 seconds = 685.28657 hours = 28.554 earth days 
+			//
+			//modified period for nicer clocks:
+			//based upon a 684 hour day, which has a whopping 18 factors. It's not an "Antiprime" but that *is* a lot.
+			//1 | 2 | 3 | 4 | 6 | 9 | 12 | 18 | 19 | 36 | 38 | 57 | 76 | 114 | 171 | 228 | 342 | 684 (18 divisors)
+			//
+			//orbital period = 1119638.341 seconds = 311.01065 hours = 12.959 earth days
+			//sidereal day   = 2053229.203 seconds = 570.34145 hours = 23.76 earth days
+			//solar day      = 2462400.000 seconds = 684.00000 hours = 28.5 earth days
+			
+			solarRotationPeriod = True
+			rotationPeriod = 2462400.000
+			
 			geeASL = 0.68 
 			isHomeWorld = False
 			timewarpAltitudeLimits = 0 25 50 100 150 200 250 300
-			initialRotation = 120
+			initialRotation = 250
 			tidallyLocked = false
 			albedo = 0.425
 			ScienceValues
