--- a/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
@@ -145,8 +145,20 @@
 		{
 			Material
 			{
-				texture = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/d_color.png
-				normals = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/Sauweld_Normal.png
+				%rimPower = 2.48
+				%rimBlend = 0.29
+				Gradient
+				{
+					0.0 = 0.55, 0.54, 0.5, 1.0
+					0.1 = 0,0,0,1
+					0.6 = 0.0,0.0,0.0,1.0
+					1.0 = 0.0,0.0,0.0,1.0
+				}
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/d_color.dds
+				normals = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/Sauweld_Normal.dds
 			}
 		}
 		PQS
@@ -166,7 +178,7 @@
 				}
 				VertexColorMap
 				{
-					map = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/d_color.png
+					map = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/d_color.dds
 					order = 10
 					enabled = True
 					name = _Color
