--- a/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/ScaledClouds.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/ScaledClouds.cfg
@@ -15,7 +15,7 @@
 			%fadeEnd = 12000
 			@Material
 			{
-				%texture = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/Windswept_Scaled.png
+				
 				%bumpMapScale = 15,8
 				%bumpMapOffset = 0,0
 				%normals = BUILTIN/cloud_normal
@@ -29,6 +29,12 @@
 					0.6 = 0.0,0.0,0.0,1.0
 					1.0 = 0.0,0.0,0.0,1.0
 				}
+				
+			}
+			%OnDemand
+			{
+				!normals = *
+				%texture = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/Windswept_Scaled.dds
 			}
 		}
 	}
