--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/0_Sauwel_e_Caen.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/0_Sauwel_e_Caen.cfg
@@ -38,7 +38,7 @@
 
          		        }
 				
-				biomeMap = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Thingy 10 Biome.png
+				biomeMap = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Caen_Biome.png
 
 				Biomes
 				{
@@ -118,16 +118,20 @@
 
 			Material
 			{
-			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Sauwel e_Color3.png
-			normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Caen_Normal.png
-			color = 1,1,1,1
-			specColor = 0.25,0.400000006,0.5,1
-			shininess = 0.215
-	
-			rimPower = 2.25
-			rimBlend = 0.875
-			rimColorRamp = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Blue.png
+				
+				color = 1,1,1,1
+				specColor = 0.25,0.400000006,0.5,1
+				shininess = 0.215
+		
+				rimPower = 2.25
+				rimBlend = 0.875
+				rimColorRamp = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Blue.png
 
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Caen_ScaledSpaceColor.dds
+				normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Caen_Normal.dds
 			}
 		}
 
@@ -258,12 +262,12 @@
 				{
 					order = 5
 					enabled = true
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Sauwel_e_PQSColor.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Caen_PQS_Color.png
 				}
 
 				VertexHeightMap
 				{
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Thingy 10.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Caen_HeightMap.png
 					offset = -2880
 					deformity = 8000
 					scaleDeformityByRadius = false
