--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/1_Sauwel_e_1_Ovoidun.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/1_Sauwel_e_1_Ovoidun.cfg
@@ -37,7 +37,7 @@
 
           		  }
 
-			biomeMap = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\emoon 1 Biome.png
+			biomeMap = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Ovoidun_Biome.png
 
 				Biomes
 				{
@@ -112,11 +112,15 @@
 
 			Material
 			{
-			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Ovoidun_ScaledspaceColor.png
-			normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Ovoidun_Normal.png
-			color = 1,1,1,1
-			specColor = 0,0,0,0
-			shininess = 0.215
+				
+				color = 1,1,1,1
+				specColor = 0,0,0,0
+				shininess = 0.215
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Ovoidun_ScaledspaceColor.dds
+				normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Ovoidun_Normal.dds
 			}
 		}
 
@@ -130,13 +134,13 @@
 				{
 					order = 5
 					enabled = true
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Ovoidun_PQS_Color.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Ovoidun_PQS_Color.png
 
 				}
 
 				VertexHeightMap
 				{
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Ovoidun_Height.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Ovoidun_Height.png
 					offset = 0
 					deformity = 4000.0
 					scaleDeformityByRadius = false
@@ -147,7 +151,7 @@
 
 				VertexHeightMap
 				{
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Prolate_Height.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Prolate_Height.png
 					offset = 1000
 					deformity = 5000.0
 					scaleDeformityByRadius = false
