--- a/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/4_Sauwel_e/2_Sauwel_e_2_Menea.cfg
@@ -35,7 +35,7 @@
 				spaceAltitudeThreshold = 140000 // Alt
 
           		  }
-			biomeMap = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\emoon 2 biome2.png
+			biomeMap = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Menea_Biome.png
 
                 Biomes
                 {
@@ -115,11 +115,15 @@
 
 			Material
 			{
-			texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Menea_ScaledSpaceColor.png
-			normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Menea_Normal.png
-			color = 1,1,1,1
-			specColor = 0,0,0,0
-			shininess = 0.03
+				
+				color = 1,1,1,1
+				specColor = 0,0,0,0
+				shininess = 0.03
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Menea_ScaledSpaceColor.dds
+				normals = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Menea_Normal.dds
 			}
 		}
 
@@ -133,12 +137,12 @@
 				{
 					order = 5
 					enabled = true
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Menea_PQS_Color.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Menea_PQS_Color.png
 				}
 
 				VertexHeightMap
 				{
-					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\Textures\Menea_Height.png
+					map = WeekWorldPlanetJam\KopernicusFiles\4_Sauwel_e\PluginData\Menea_Height.png
 					offset = 0
 					deformity = 4000.0
 					scaleDeformityByRadius = false
