--- a/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Aire.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Aire.cfg
@@ -58,8 +58,12 @@
 				color = 1,1,1,1
 				shininess = 0.03
 				specColor = 0,0,0,1
-				texture = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Aire_Color.png
-				normals = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Aire_Normal.png
+				
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Aire_Color.dds
+				normals = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Aire_Normal.dds
 			}
 		}
 		PQS
