--- a/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Avu.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Avu.cfg
@@ -115,8 +115,7 @@
 			Material
 			{
 				specColor = 0,0,0,1
-				texture = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Avu_Color.png
-				normals = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Avu_Normal.png
+				
 				rimPower = 1
 				rimBlend = 0.3
 				Gradient
@@ -127,6 +126,11 @@
 					0.1 = 0.0,0.0,0.0,1.0
 					1.0 = 0.0,0.0,0.0,1.0
 				}
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Avu_Color.dds
+				normals = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Avu_Normal.dds
 			}
 		}
 		PQS
