--- a/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_b.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/0_Sauwel_g_b.cfg
@@ -51,8 +51,7 @@
 			fadeEnd = 80000
 			Material
 			{
-				texture = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Plugindata/AwoyColor.dds
-				normals = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Plugindata/Awoy_Normal_fixed.png
+				
 				color = 1,1,1,1
 				specColor = 0.1,0.1,0.1,1
 				shininess = 1
@@ -60,8 +59,8 @@
 			}
 			OnDemand
             {
-				texture = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Plugindata/AwoyColor.dds
-				normals = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/Plugindata/Awoy_Normal_fixed.png
+				texture = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/PluginData/AwoyColor.dds
+				normals = WeekWorldPlanetJam/KopernicusFiles/6_Sauwel_g/PluginData/Awoy_Normal.dds
             }
 		}
 		PQS
