--- a/WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/0_Sauwel_i.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/0_Sauwel_i.cfg
@@ -70,9 +70,13 @@
 			fadeEnd = 65000
 			Material
 			{
-				texture = WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/PluginData/Iridel_Color.png
-				normals = WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/PluginData/Iridel_Normal.png
+				
 				specColor = 0,0,0,0
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/PluginData/Iridel_Color.dds
+				normals = WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/PluginData/Iridel_Normal.dds
 			}
 		}
 		PQS
@@ -150,7 +154,7 @@
 				VertexColorMap
 				{
 					order = 10
-					map = WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/PluginData/Iridel_Color.png
+					map = WeekWorldPlanetJam/KopernicusFiles/8_Sauwel_i/PluginData/Iridel_Color.dds
 					enabled = true
 				}
 				VertexHeightNoiseVertHeightCurve2
