--- a/WeekWorldPlanetJam/KopernicusFiles/9_Sauwel_j/Erica.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/9_Sauwel_j/Erica.cfg
@@ -216,10 +216,10 @@
 				color = 1,1,1,1
 				specColor = 0.0745098069,0.0666666701,0.0509803966,1
 				shininess = 0
-				texture = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/Textures/Erica_colormap.dds
+				
 				mainTexScale = 1,1
 				mainTexOffset = 0,0
-				normals = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/Textures/Erica_Normal_Fixed.png
+				
 				bumpMapScale = 1,1
 				bumpMapOffset = 0,0
 				rimPower = 2
@@ -229,6 +229,11 @@
 				rimColorRampOffset = 0,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/PluginData/Erica_colormap.dds
+				normals = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/PluginData/Erica_Normal_Fixed.dds
 			}
 		}
 		PQS
@@ -286,7 +291,7 @@
 			{
 				VertexHeightMap
 				{
-					map = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/Textures/Erica_Heightmap.png
+					map = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/PluginData/Erica_Heightmap.png
 					offset = 0
 					deformity = 3100
 					scaleDeformityByRadius = False
@@ -356,7 +361,7 @@
 				//}
 				VertexColorMap
 				{
-					map = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/Textures/Erica_colormap.dds
+					map = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/PluginData/Erica_colormap.dds
 					order = 350
 					enabled = True
 				}
