--- a/WeekWorldPlanetJam/KopernicusFiles/9_Sauwel_j/Merune.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/9_Sauwel_j/Merune.cfg
@@ -67,10 +67,10 @@
 				color = 1,1,1,1
 				specColor = 0.0745098069,0.0666666701,0.0509803966,1
 				shininess = 0
-				texture = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/Textures/Merune_colormap.dds
+				
 				mainTexScale = 1,1
 				mainTexOffset = 0,0
-				normals = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/Textures/Merune_nrm.dds
+				
 				bumpMapScale = 1,1
 				bumpMapOffset = 0,0
 				rimPower = 3.54
@@ -80,6 +80,11 @@
 				rimColorRampOffset = 0,0
 				resourceMapScale = 1,1
 				resourceMapOffset = 0,0
+			}
+			OnDemand
+			{
+				normals = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/PluginData/Merune_nrm.dds
+				texture = WeekWorldPlanetJam/KopernicusFiles/9_sauwel_j/PluginData/Merune_colormap.dds
 			}
 		}
 		Atmosphere				
