--- a/WeekWorldPlanetJam/SETTINGS.cfg
+++ b/WeekWorldPlanetJam/SETTINGS.cfg
@@ -10,6 +10,39 @@ WWPJ_Settings
 	//When set to Kerbin, an unmodified stock Kerbin will be placed into a 0.292 au orbit around Sauwel.
 	//Kerbin is essentially a debug option--it is not intended to be played from. Its orbit will also be super close to Windswept.
 	
+	KronometerCalendar = AP_Week
+	
+	//Options are AP_Week, AP_Kerbin, AP_Earth, AP_Seximal
+	//Default is AP_Week.
+	//
+	//AP_Week: The Solar Day is broken into 4 "Weeks" of 171 hours (7.125 real days) length. 60 Minutes per hour, 60 seconds per minute.
+	//         exactly 1 real second per second. This is my favorite because the sauwel system took almost exactly a week to make.
+	//         and this is the only calendar that implements a week.
+	//
+	//AP_Kerbin: The Solar Day (called a "year") is broken into 114 days, each is 6 hours long. There's 60 minutes per hour, 60 seconds per minute.
+	//           1 second = exactly one real second. This is probably how Kerbals who are used to Kerbin time would count time on Asite Par.
+	//
+	//AP_Earth: 12 Solar Days makes a Dozannum. There are 342 days in a Dozannum, 24 hours in a day, 60 minutes in an hour, and 60 seconds per minute.
+	//          This is the most legible to those of us who are used to 24 hour time and who want to count our time in Earth-days, while still
+	//          being astronomically relevant on Asite Par. 1 second = exactly 1 real second. A Dozannum is also close to a real year.
+	//          There are also named months, or Sawlths, equal to about 1 Solar Day. 
+	//          All sawlths ending in "-ary" have 29 days, all that end in "-ber" have 28 days. 
+	//
+	//AP_Seximal: The Solar Day is broken into 36 Nifths, into 36 hours, into 36 minutes, into 36 sexonds. 
+	//            1.46604938 sexonds per real second. This the clock that Kerbals would use if they counted in base-6, known as Seximal.
+	//            see https://www.seximal.net/ for why base 6 is the superior counting system. It's a shame we can't actually use base-6 in KSP. :P
+	//            Really you could argue this clock is actually Niftimal, not Seximal.
+	//            But this is what Asite-Parbles would use if they had a Seximal counting system, so I'm calling it Seximal.
+	//
+	//AP_Dozenal: The Solar Day is broken into 12 Twelths, into 12 quours, into 144 diminutes, into 144 zeconds.
+	//            0.824652778 zeconds per real second. This one's to appease any dozenal addicts out there. Stay strong folks, you'll get through this.
+	//
+	//AP_Metric: 1000 seconds are grouped into a kilosecond, 1000 kiloseconds are grouped into a megasecond.
+	//           Every 2.4624 megaseconds there is a new Sawlth. Every 10 Sawlths is a Decade.
+	//           This one is easily the worst! But after making a Base-6 and Base-12 i figured I'd have to make a base-10.
+	//           
+	
+	
 	ScaledspaceClouds = True
 	
 	//Options are True or False. (Case sensitive.)
@@ -17,7 +50,6 @@ WWPJ_Settings
 	//False: Use Windswept's unfinished pqs colormap as a scaledspace map.
 	
 	//Planned additional settings:
-	//Kronometer compatibility
 	//Sun color correction mode (pale yellow default vs "orange" dwarf)
 	//Sun intensity curve setting (continuous light versus dimmer light with distance)
 }
