--- a/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Ein.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Ein.cfg
@@ -57,8 +57,12 @@
 				color = 1,1,1,1
 				shininess = 0.03
 				specColor = 0,0,0,1
-				texture = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Ein_Color.png
-				normals = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Ein_Normal.png
+				
+			}
+			OnDemand
+			{
+				texture = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Ein_Color.dds
+				normals = WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/PluginData/Ein_Normal.dds
 			}
 		}
 		PQS
