Fix AP's rotation period and clocks; new Elaan colors
* negative solar rotation periods are not allowed, so a near approximation of the sidereal period is used instead. Hopefully it's close enough.
* New color map for Elaan with slightly tealer vegetation.
* Adjust atmosphereFromGround on Windswept and Erica.
* Adjust fade altitudes for Windswept's cloud mode.
* tweak Awoy's terrain saturation and contrast.
* Fix a typo in the Kronometer configs (all configs addressed Kopernicus instead of Kronometer).

--- a/WeekWorldPlanetJam/HomeworldSwap/AsitePar_Homeworld.cfg
+++ b/WeekWorldPlanetJam/HomeworldSwap/AsitePar_Homeworld.cfg
@@ -21,8 +21,8 @@
 		{
 			%isHomeWorld = True
 			%displayName = Asite Par^N
-			%solarRotationPeriod = True
-			%rotationPeriod = 2462400.000
+			%rotationPeriod = 2053229.203
+			%solarRotationPeriod = False
 		}
 		SpaceCenter
 		{
