--- a/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/AsitePar.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/2_Sauwel_c/AsitePar.cfg
@@ -31,8 +31,11 @@
 			//sidereal day   = 2053229.203 seconds = 570.34145 hours = 23.76 earth days
 			//solar day      = 2462400.000 seconds = 684.00000 hours = 28.5 earth days
 			
-			solarRotationPeriod = True
-			rotationPeriod = 2462400.000
+			//solarRotationPeriod = True
+			//rotationPeriod = -2462400.000 //turns out this does not work.
+			
+			solarRotationPeriod = False
+			rotationPeriod = 2053229.203
 			
 			geeASL = 0.68 
 			isHomeWorld = False
