--- a/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
@@ -140,6 +140,10 @@
 				key = 0.995 0.000009243
 				key = 1 0
 			}
+			atmosphereFromGround
+			{
+				waveLength = 0.7517731,0.8191719,0.8854452,0
+			}
 		}
 		ScaledVersion
 		{
