--- a/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/ScaledClouds.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/ScaledClouds.cfg
@@ -11,8 +11,8 @@
 		@ScaledVersion
 		{
 			%sphericalModel = True
-			%fadeStart = 18000
-			%fadeEnd = 12000
+			%fadeStart = 14000
+			%fadeEnd = 14500
 			@Material
 			{
 				
@@ -36,6 +36,11 @@
 				!normals = *
 				%texture = WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/PluginData/Windswept_Scaled.dds
 			}
+		}
+		@PQS
+		{
+			%fadeStart = 15000
+			%fadeEnd = 20000
 		}
 	}
 }
