--- a/WeekWorldPlanetJam/KopernicusFiles/9_Sauwel_j/Erica.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/9_Sauwel_j/Erica.cfg
@@ -107,12 +107,16 @@
 		{				
 			enabled = True			
 			oxygen = False			
-			altitude = 12000
-			waveLenght = 0.967307568,0.730769455,0.591346383,0.5			
+			altitude = 12000		
 			adiabaticIndex = 1.39			
 			atmosphereMolarMass = 0.042			
 			temperatureSeaLevel = 139			
-			staticPressureASL =	2.0265			
+			staticPressureASL =	2.0265		
+			addAFG = True
+			atmosphereFromGround
+			{
+				waveLength = 0.934615493,0.842307687,0.701923072,0.5
+			}
 			temperatureCurve				
 			{				
 				key =	0	124	0.00000E+00	1.00200E-03
