--- a/WeekWorldPlanetJam/ModCompatibility/Kronometer/AP_Kerbin.cfg
+++ b/WeekWorldPlanetJam/ModCompatibility/Kronometer/AP_Kerbin.cfg
@@ -1,8 +1,8 @@
-@Kopernicus:HAS[!WWPJ_Settings]:AFTER[WeekWorldPlanetJam]
+@Kronometer:HAS[!WWPJ_Settings]:AFTER[WeekWorldPlanetJam]
 {
 	#@WWPJ_Settings {}
 }
-@Kopernicus:HAS[@WWPJ_Settings:HAS[#KronometerCalendar[AP_Kerbin]]]:AFTER[WeekWorldPlanetJam]
+@Kronometer:HAS[@WWPJ_Settings:HAS[#KronometerCalendar[AP_Kerbin]]]:AFTER[WeekWorldPlanetJam]
 {
 	!CustomTime{}
 	CustomTime
