a few small fixes
* Hotfix for Asite Par science values.
* AFG for Avu
* remove scaledspace fade values on Avu (use dres template instead; fixes opacity issues)
* roughly half Mindo's scatterer atmosphere scale height.

--- a/WeekWorldPlanetJam/Career/ScienceMultipliers.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceMultipliers.cfg
@@ -37,20 +37,38 @@
 	}
 	
 	/Sauwel c
-	@Body[AsitePar] //37
+	//@Body[AsitePar] //37
+	//{
+	//	@Properties
+	//	{
+	//		%ScienceValues
+	//		{
+	//			%landedDataValue = 8
+	//			%splashedDataValue = 8
+	//			%flyingLowDataValue = 6
+	//			%flyingHighDataValue = 6
+	//			%inSpaceLowDataValue = 5
+	//			%inSpaceHighDataValue = 4
+	//			%recoveryValue = 4
+	//			%flyingAltitudeThreshold = 53000
+	//			%spaceAltitudeThreshold = 500000
+	//		}
+	//	}
+	//}
+	@Body[AsitePar]
 	{
 		@Properties
 		{
 			%ScienceValues
 			{
-				%landedDataValue = 8
-				%splashedDataValue = 8
-				%flyingLowDataValue = 6
-				%flyingHighDataValue = 6
-				%inSpaceLowDataValue = 5
-				%inSpaceHighDataValue = 4
-				%recoveryValue = 4
-				%flyingAltitudeThreshold = 53000
+				%landedDataValue = 0.3
+				%splashedDataValue = 0.4
+				%flyingLowDataValue = 0.7
+				%flyingHighDataValue = 0.9
+				%inSpaceLowDataValue = 1
+				%inSpaceHighDataValue = 1.5
+				%recoveryValue = 1
+				%flyingAltitudeThreshold = 22000 //lower for gameplay reasons
 				%spaceAltitudeThreshold = 500000
 			}
 		}
