--- a/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Avu.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/5_Sauwel_f/Avu.cfg
@@ -67,6 +67,11 @@
 			altitude = 48000
 			staticPressureASL = 9.86
 			pressureCurveIsNormalized = true
+			addAFG = true
+			atmosphereFromGround
+			{
+				waveLength = 0.848,0.69,0.625,0.5
+			}
 			pressureCurve
 			{
 				key = 0 1
@@ -110,8 +115,8 @@
 		ScaledVersion
 		{
 			type = Atmospheric
-			fadeStart = 57500
-			fadeEnd = 60000
+			//fadeStart = 57500
+			//fadeEnd = 60000
 			Material
 			{
 				specColor = 0,0,0,1
