--- a/WeekWorldPlanetJam/Career/ScienceMultipliers.cfg
+++ b/WeekWorldPlanetJam/Career/ScienceMultipliers.cfg
@@ -37,7 +37,7 @@
 	}
 	
 	/Sauwel c
-	//@Body[AsitePar] //37
+	//@Body[AsitePar] //37--------non-homeworld version
 	//{
 	//	@Properties
 	//	{
@@ -55,42 +55,24 @@
 	//		}
 	//	}
 	//}
-	@Body[AsitePar]
-	{
-		@Properties
-		{
-			%ScienceValues
-			{
-				%landedDataValue = 0.3
-				%splashedDataValue = 0.4
-				%flyingLowDataValue = 0.7
-				%flyingHighDataValue = 0.9
-				%inSpaceLowDataValue = 1
-				%inSpaceHighDataValue = 1.5
-				%recoveryValue = 1
-				%flyingAltitudeThreshold = 22000 //lower for gameplay reasons
-				%spaceAltitudeThreshold = 500000
-			}
-		}
-	}
-	@Body[Kerbin]
-	{
-		@Properties
-		{
-			%ScienceValues
-			{
-				%landedDataValue = 0.3
-				%splashedDataValue = 0.4
-				%flyingLowDataValue = 0.7
-				%flyingHighDataValue = 0.9
-				%inSpaceLowDataValue = 1
-				%inSpaceHighDataValue = 1.5
-				%recoveryValue = 1
-				%flyingAltitudeThreshold = 22000 //lower for gameplay reasons
-				%spaceAltitudeThreshold = 500000
-			}
-		}
-	}
+	//@Body[AsitePar]  //---------homeworld version
+	//{
+	//	@Properties
+	//	{
+	//		%ScienceValues
+	//		{
+	//			%landedDataValue = 0.3
+	//			%splashedDataValue = 0.4
+	//			%flyingLowDataValue = 0.7
+	//			%flyingHighDataValue = 0.9
+	//			%inSpaceLowDataValue = 1
+	//			%inSpaceHighDataValue = 1.5
+	//			%recoveryValue = 1
+	//			%flyingAltitudeThreshold = 22000 //lower for gameplay reasons
+	//			%spaceAltitudeThreshold = 500000
+	//		}
+	//	}
+	//}
 	@Body[Yroptos] //15
 	{
 		@Properties
