--- a/WeekWorldPlanetJam/HomeworldSwap/AsitePar_Homeworld.cfg
+++ b/WeekWorldPlanetJam/HomeworldSwap/AsitePar_Homeworld.cfg
@@ -23,6 +23,18 @@
 			%displayName = Asite Par^N
 			%rotationPeriod = 2053229.203
 			%solarRotationPeriod = False
+			%ScienceValues
+			{
+				%landedDataValue = 0.3
+				%splashedDataValue = 0.4
+				%flyingLowDataValue = 0.7
+				%flyingHighDataValue = 0.9
+				%inSpaceLowDataValue = 1
+				%inSpaceHighDataValue = 1.5
+				%recoveryValue = 1
+				%flyingAltitudeThreshold = 22000
+				%spaceAltitudeThreshold = 500000
+			}
 		}
 		SpaceCenter
 		{
