--- a/WeekWorldPlanetJam/HomeworldSwap/Kerbin.cfg
+++ b/WeekWorldPlanetJam/HomeworldSwap/Kerbin.cfg
@@ -14,4 +14,38 @@
 			%semiMajorAxis = 4.36148994e9 //SAU
 		}
 	}
+	//raise science values for Asite Par.
+	@Body[AsitePar] //37
+	{
+		@Properties
+		{
+			%ScienceValues
+			{
+				%landedDataValue = 8
+				%splashedDataValue = 8
+				%flyingLowDataValue = 6
+				%flyingHighDataValue = 6
+				%inSpaceLowDataValue = 5
+				%inSpaceHighDataValue = 4
+				%recoveryValue = 4
+				%flyingAltitudeThreshold = 53000
+				%spaceAltitudeThreshold = 500000
+			}
+		}
+	}
+}
+@Scatterer_planetsList:HAS[!WWPJ_Settings]:AFTER[WeekWorldPlanetJam]
+{
+	#@WWPJ_Settings {}
+}
+@Scatterer_planetsList:HAS[@WWPJ_Settings:HAS[#Homeworld[Kerbin]]]:AFTER[WeekWorldPlanetJam]
+{
+	
+	@scattererCelestialBodies
+	{
+		@Item:HAS[#celestialBodyName[Kerbin]]
+		{
+			%sunColor = 1,0.83,0.71
+		}
+	}
 }
