--- a/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/3_Sauwel_d/0_Sauwel_d.cfg
@@ -27,6 +27,7 @@
 			rotationPeriod = 25200
 			//7 hours or 420 minutes.
 			//description = -Adstri \n [ed note: description pending. detailed surface maps pending, too.]
+			albedo = 0.2
 			ScienceValues
             {
 
@@ -115,31 +116,88 @@
 		}
 		Atmosphere
 		{
-			atmosphereDepth = 36000
-			staticPressureASL = 6
-			adiabaticIndex =	1.30
-			atmosphereMolarMass =	0.04401
-			pressureCurveIsNormalized = True //thanks to Cloverdove, I now know that this is possible. -Luna
-			pressureCurve
-			{
-				key = 0 1
-				key = 0.1 0.733
-				key = 0.2 0.524
-				key = 0.3 0.363
-				key = 0.4 0.241
-				key = 0.5 0.151
-				key = 0.6 0.0878
-				key = 0.7 0.0446
-				key = 0.8 0.0179
-				key = 0.9 0.0040
-				key = 0.91 0.00326
-				key = 0.93 0.00193
-				key = 0.95 0.000967
-				key = 0.97 0.000341
-				key = 0.99 0.0000372
-				key = 0.995 0.000009243
-				key = 1 0
-			}
+			//95% CO2 
+			//2.5% N2 
+			//1.5% NH3
+			//0.5% SO2 
+			//0.25% Ar 
+			//0.2% CO 
+			//0.05% H2S
+			
+			
+			enabled =	True			
+			oxygen =	False			
+			altitude =	33000			
+			adiabaticIndex =	1.30			
+			atmosphereMolarMass =	0.04326			
+			temperatureSeaLevel =	305			
+			staticPressureASL =	6.28215			
+			temperatureCurve				
+			{				
+				key =	0	301	0.00000E+00	-1.60000E-02
+				key =	1000	285	-1.60000E-02	0.00000E+00
+				key =	5000	285	0.00000E+00	-3.40000E-03
+				key =	10000	268	-3.40000E-03	-6.80000E-03
+				key =	20000	200	-6.80000E-03	-2.00000E-03
+				key =	30000	180	-2.00000E-03	0.00000E+00
+			}				
+			temperatureSunMultCurve				
+			{				
+				key =	0	1	0.00000E+00	-6.00000E-05
+				key =	20000	-0.2	-6.00000E-05	1.33333E-05
+				key =	50000	0.2	1.33333E-05	0.00000E+00
+				key =	65000	0.2	0.00000E+00	0.00000E+00
+				key =	90000	0.2	0.00000E+00	0.00000E+00
+			}				
+			temperatureLatitudeBiasCurve				
+			{				
+				key =	0	8.27	0	0
+				key =	38	0	-0.4191	-0.4191
+				key =	90	-30.73	-0.6807	0
+			}				
+			temperatureLatitudeSunMultCurve				
+			{				
+				key =	0	10	0	0
+				key =	38	8.94	-0.0537	-0.0537
+				key =	90	5	-0.0873	0
+			}				
+			temperatureAxialSunBiasCurve				
+			{				
+				key =	0	0.02	-0.0006	-0.0006
+				key =	36	0	-0.0007	-0.0007
+				key =	126	-0.04	0	0
+				key =	216	0	0.0007	0.0007
+				key =	306	0.04	0	0
+				key =	360	0.02	-0.0006	-0.0006
+			}				
+			temperatureAxialSunMultCurve				
+			{				
+				key =	0	0	0	0
+				key =	38	0.5	0.02	0.02
+				key =	90	1	0	0
+			}				
+			temperatureEccentricityBiasCurve				
+			{				
+				key =	0	0.08	0	-0.16
+				key =	1	-0.08	-0.16	0
+			}				
+			pressureCurve				
+			{				
+				key =	0	6.28215E+00	0.00000E+00	-1.28514E-03
+				key =	3000	3.30412E+00	-7.14687E-04	-7.14687E-04
+				key =	5000	2.14331E+00	-4.64132E-04	-4.64132E-04
+				key =	8000	1.10560E+00	-2.48680E-04	-2.48680E-04
+				key =	10000	7.00975E-01	-1.61840E-04	-1.61840E-04
+				key =	13000	3.40913E-01	-8.53312E-05	-8.53312E-05
+				key =	15000	2.03670E-01	-5.40142E-05	-5.40142E-05
+				key =	18000	8.85164E-02	-2.57814E-05	-2.57814E-05
+				key =	20000	4.84622E-02	-1.51065E-05	-1.51065E-05
+				key =	23000	1.87721E-02	-6.02134E-06	-6.02134E-06
+				key =	25000	9.82248E-03	-3.21291E-06	-3.21291E-06
+				key =	28000	3.62807E-03	-1.22305E-06	-1.22305E-06
+				key =	30000	1.83607E-03	-6.31865E-07	-6.31865E-07
+				key =	33000	0.00000E+00	0.00000E+00	0.00000E+00
+			}				
 			atmosphereFromGround
 			{
 				waveLength = 0.7517731,0.8191719,0.8854452,0
