--- a/WeekWorldPlanetJam/KopernicusFiles/7_Sauwel_h/Scatterer/Ildebra/atmo.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/7_Sauwel_h/Scatterer/Ildebra/atmo.cfg
@@ -4,12 +4,12 @@ Scatterer_atmosphere
 	{
 		name = Ildebra
 		atmosphereStartRadiusScale = 1
-		HR = 32
-		HM = 1.20000005
-		m_betaR = 0.00200000009,0.00150000001,0.00150000001
-		BETA_MSca = 0,0,0
-		m_mieG = 0.850000024
-		averageGroundReflectance = 0.100000001
+		HR = 18
+		HM = 18
+		m_betaR = 0.000750,0.00075,0.001125
+		BETA_MSca = 0.0045,0.00225,0.00225
+		m_mieG = 1
+		averageGroundReflectance = 0.5
 		multipleScattering = True
 		godrayStrength = 0.800000012
 		flattenScaledSpaceMesh = 0
@@ -25,12 +25,12 @@ Scatterer_atmosphere
 		volumetricsColorMultiplier = 1
 		EVEIntegration_preserveCloudColors = True
 		adjustScaledTexture = False
-		scaledLandBrightnessAdjust = 1
-		scaledLandContrastAdjust = 1
-		scaledLandSaturationAdjust = 1
-		scaledOceanBrightnessAdjust = 1
-		scaledOceanContrastAdjust = 1
-		scaledOceanSaturationAdjust = 1
+		scaledLandBrightnessAdjust = 0.8
+		scaledLandContrastAdjust = 1.3
+		scaledLandSaturationAdjust = 1.0
+		scaledOceanBrightnessAdjust = 0.8
+		scaledOceanContrastAdjust = 1.3
+		scaledOceanSaturationAdjust = 1.0
 		configPoints
 		{
 			Item
@@ -39,7 +39,7 @@ Scatterer_atmosphere
 				skyExposure = 0.25
 				skyAlpha = 1
 				skyExtinctionTint = 0.600000024
-				scatteringExposure = 0.0500000007
+				scatteringExposure = 0.2
 				extinctionThickness = 0.600000024
 				postProcessAlpha = 0.779999971
 				postProcessDepth = 2.4000001
@@ -48,7 +48,7 @@ Scatterer_atmosphere
 			Item
 			{
 				altitude = 160000
-				skyExposure = 0.119999997
+				skyExposure = 0.2
 				skyAlpha = 1
 				skyExtinctionTint = 0
 				scatteringExposure = 0.200000003
