--- a/WeekWorldPlanetJam/KopernicusFiles/7_Sauwel_h/Scatterer/Noir/atmo.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/7_Sauwel_h/Scatterer/Noir/atmo.cfg
@@ -39,7 +39,7 @@ Scatterer_atmosphere
 				skyExposure = 0.25
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.230000004
+				scatteringExposure = 0.25
 				extinctionThickness = 1
 				postProcessAlpha = 1
 				postProcessDepth = 0.0799999982
@@ -51,7 +51,7 @@ Scatterer_atmosphere
 				skyExposure = 0.25
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.230000004
+				scatteringExposure = 0.25
 				extinctionThickness = 1
 				postProcessAlpha = 1
 				postProcessDepth = 0.100000001
@@ -60,10 +60,10 @@ Scatterer_atmosphere
 			Item
 			{
 				altitude = 250000
-				skyExposure = 0.200000003
+				skyExposure = 0.15
 				skyAlpha = 1
 				skyExtinctionTint = 1
-				scatteringExposure = 0.075000003
+				scatteringExposure = 0.12
 				extinctionThickness = 0.5
 				postProcessAlpha = 1
 				postProcessDepth = 0.100000001
