--- a/WeekWorldPlanetJam/ModCompatibility/Scatterer/0_PlanetsList.cfg
+++ b/WeekWorldPlanetJam/ModCompatibility/Scatterer/0_PlanetsList.cfg
@@ -75,6 +75,22 @@
 				Item = Cytosel
 			}
 		}
+		//PLANET D
+		Item
+		{
+			celestialBodyName = Windswept
+			transformName = Windswept
+			hasOcean = False
+			loadDistance = 300000000
+			unloadDistance = 500000000
+			flatScaledSpaceModel = False
+			usesCloudIntegration = True
+			cloudIntegrationUsesScattererSunColors = True
+			mainSunCelestialBody = Sun
+			sunColor = 1,0.83,0.71
+			sunsUseIntensityCurves = True
+		}
+		
 		
 		//PLANET E
 		Item
@@ -94,6 +110,27 @@
 			{
 				Item = Ovoidun
 				Item = Menea
+			}
+		}
+		
+		//PLANET F
+		Item
+		{
+			celestialBodyName = Avu
+			transformName = Avu
+			hasOcean = False
+			loadDistance = 300000000
+			unloadDistance = 500000000
+			flatScaledSpaceModel = False
+			usesCloudIntegration = True
+			cloudIntegrationUsesScattererSunColors = True
+			mainSunCelestialBody = Sun
+			sunColor = 1,0.83,0.71
+			sunsUseIntensityCurves = True
+			eclipseCasters 
+			{
+				Item = Ein
+				Item = Aire
 			}
 		}
 		
@@ -122,8 +159,8 @@
 		{
 			celestialBodyName = Ildebra
 			transformName = Ildebra
-			loadDistance = 100000000
-			unloadDistance = 200000000
+			loadDistance = 500000000
+			unloadDistance = 1000000000
 			hasOcean = False
 			flatScaledSpaceModel = True
 			usesCloudIntegration = False
@@ -141,6 +178,26 @@
 			usesCloudIntegration = False
 			mainSunCelestialBody = Sun
 			sunColor = 1.0,0.9098,0.8353
+		}
+		
+		//PLANET J
+		Item
+		{
+			celestialBodyName = Erica
+			transformName = Erica
+			hasOcean = False
+			loadDistance = 300000000
+			unloadDistance = 500000000
+			flatScaledSpaceModel = False
+			usesCloudIntegration = True
+			cloudIntegrationUsesScattererSunColors = True
+			mainSunCelestialBody = Sun
+			sunColor = 1,0.83,0.71
+			sunsUseIntensityCurves = True
+			eclipseCasters
+			{
+				Item = Merune
+			}
 		}
 	}
 }
