--- a/WeekWorldPlanetJam/SETTINGS.cfg
+++ b/WeekWorldPlanetJam/SETTINGS.cfg
@@ -46,6 +46,7 @@ WWPJ_Settings
 	ScaledspaceClouds = True
 	
 	//Options are True or False. (Case sensitive.)
+	//Default is True. Recommend only set this to False if you're using scatterer.
 	//True: Use a global dust storm map on Windswept
 	//False: Use Windswept's unfinished pqs colormap as a scaledspace map.
 	
