add oxygen to Elaan

--- a/WeekWorldPlanetJam/KopernicusFiles/1_Sauwel_b/0_Sauwel_b.cfg
+++ b/WeekWorldPlanetJam/KopernicusFiles/1_Sauwel_b/0_Sauwel_b.cfg
@@ -150,7 +150,7 @@
 		Atmosphere						//75.9% N2, 19.7% O2, 2.1% H2O, 1.2% Ar, 1.1% SO2	
 		{
 			enabled = True				
-			oxygen = False				
+			oxygen = True			
 			altitude = 65000				
 			adiabaticIndex = 1.40				
 			atmosphereMolarMass = 0.02913				
